pkg/kube/testdata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: nginx
          name: nginx
          resources:
            requests:
              memory: "128Mi"
#              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
